...
export const ORDER_STATUS_FILTER_DATA = [
  {
    label: 'All',
    value: '',
  },
  {
    label: 'Paid orders',
    value: 'Paid',
  },
  {
    label: 'Due orders',
    value: 'Due',
  },
...
    value: 'Overdue',
  },
];
//invoice order sort data
export const ORDER_SORT_DATA = [
  {
    label: 'Ascending',
    value: 'ASCENDING',
  },
  {
    label: 'Descending',
    value: 'DESCENDING',
  },
...
